# icarusalg

icarusalg/Geometry/: CMakeLists.txt  icarus_TopCRT_corrected_nowires.gdml
icarusalg/Geometry/gdml/: 4  feb_map.txt  gen_crt_frags.py  icarus_Cryostat.gdml  icarus_Def.gdml  icarus_DetEnclosure.gdml  icarus_Materials.gdml  icarus_TPC.gdml  icarus_crt.gdml  icarus_racetracks.gdml
icarusalg/Utilities/: CMakeLists.txt
icarusalg/gallery/DetectorActivityRatePlots/C++/: CMakeLists.txt
icarusalg/gallery/MCTruthBase/: CMakeLists.txt
icarusalg/gallery/galleryAnalysis/C++/: CMakeLists.txt
test/Geometry/: CMakeLists.txt
test/Utilities/: CMakeLists.txt
ups/: product_deps
